<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgr"
    tools:context="com.diorama.diorama.ResponderRegister">

    <!--<android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="EMS"
        android:gravity="center"
        android:textSize="40dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        />-->
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="@drawable/logo"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp" >

        <AutoCompleteTextView
            android:id="@+id/ed_resuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usname"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        >

        <EditText
            android:id="@+id/ed_respass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:imeActionId="@+id/login"
            android:imeActionLabel="Sign In"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textSize="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp" >

        <AutoCompleteTextView
            android:id="@+id/ed_resmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mob"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textSize="20sp" />

</android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hosp" />
            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spHospitalName"
                android:popupBackground="#ccc"
                >

            </android.support.v7.widget.AppCompatSpinner>
    <!--<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp" >

        <AutoCompleteTextView
            android:id="@+id/ed_reshospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Hospital Name"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorWhite"
            android:maxLines="1"
            android:textSize="20dp"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorLink="@color/colorWhite" />

    </android.support.design.widget.TextInputLayout>-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp" >

        <AutoCompleteTextView
            android:id="@+id/ed_imei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/imei"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp" >

        <AutoCompleteTextView
            android:id="@+id/ed_resaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" >

                <AutoCompleteTextView
                    android:id="@+id/ed_reslic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/driversli"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textColorLink="@color/colorWhite"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/loginRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="16sp"
                android:layout_marginRight="30sp"
                android:gravity="center"
                android:text="@string/reg"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/homeMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="30sp"
                android:gravity="center"

                android:text="@string/home"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>